 tool, which works with any ShapeType.
-Added the FileLowestHighestLocations tool, which will output vector points 
 corresponding to the lowest and highest points in a raster.
-Added ExtractRasterValuesAtPoints tool for extracting the cell values of each 
 image in a raster stack corresponding to a set of vector points. Values are 
 placed within the vector attribute table.

Version 3.2.1 (September 18, 2014)
-Added the Retrieve SRTM DEM Data tool. This tool will download SRTM DEM tiles from
 the USGS FTP site, import the tiles into Whitebox GAT, and optionally fill 
 missing data holes and mosaic the tiles.
-Added the ability to natively display LAS file point clouds in the map area.
-Added Hex-binning tool.
-Added a tool for isolating ground return points from LiDAR LAS files.
-Added a tool for separating large LiDAR LAS files into smaller tiles of 
 shapefile points.
-Added a Lee filter (Sigma filter) tool.
-Added Interior Point tool.
-Added CreateRectangularGridTool for creating a vector grid of polygons based on 
 a rectangular grid.
-Added Single-part to Multi-part and Multi-part to Single-part tools.
-Added List Unique Values tool to list all of the unique values in a categorical 
 field contained within a vector's attribute table. It will also report category
 frequency.
-Added a fast depression breaching tool. Depression breaching is a far superior 
 method for pre-processing a DEM for hydrological analysis (e.g. mapping 
 watersheds). One of the reasons that people continue to fill depressions instead 
 of breaching is that filling is computationally much more efficient than 
 breaching. Well this tool is just about as fast as Whitebox's depression filling 
 tool. So now you have no excuse. This should be your default tool for hydrological
 processing of DEMs. Its result is not as good as the optimal breaching tool but
 it is far more efficient and still much better than filling. Please breach.